# tour-intelligent-platform

./: .gitignore  docker-compose.yml  main.py  pyproject.toml  streamlit_app.py  test.html
config/: models.yaml  params.yaml
data/: ceysaid_corpus.jsonl  child_chunk.jsonl  parent_chunk.jsonl
data/ceysaid_markdown/: 000_tour_solo-trip-to-dubai.md  001_tour_japan-tokyo-tour.md  002_tour_northeast-india-tour.md  003_tour_kashmir-tour-package.md  004_tour_03-days-hyderabad-tour.md  005_tour_cochin-pondicherry-chennai-tour.md  006_tour_tibet-tour-package.md  007_tour_hong-kong-tour.md  008_tour_shanghai-tour-package.md  009_tour_shanghai-tour.md  010_tour_golden-japan-tour.md  011_tour_istanbul-cappadocia-tour-package.md  012_tour_istanbul-kusadas-tour-package.md  013_tour_istanbul-antalya-tour-package.md  014_tour_turkey-package-trabzon.md  015_vietnam-visa.md  016_uzbekistan.md  017_uae-visa.md  018_turkey-visa.md  019_thailand-visa.md  020_qatar-visa.md  021_philippine-visa.md  022_nepal-visa.md  023_myanmar-visa.md  024_malaysia-visa.md  025_laos-visa.md  026_japan-visa.md  027_indonesia-visa.md  028_indian-visa.md  029_egypt-visa.md  030_china-visa.md  031_cambodia-visa.md  032_bhutan-visa.md  033_azerbaijan-visa.md  034_tour_7-days-vietnam-tour-packages.md  035_tour_11-days-vietnam-tour-package.md  036_tour_cambodia-tour-packages.md  037_tour_bhutan-tour-packages.md  038_tour_dream-world-bangkok-tour.md  039_tour_wat-pho-and-royal-grand-palace-tour.md  (+55 more)
notebooks/: 01_ceysaid_web_crawler.ipynb  02_chunking_embedding_documents.ipynb
src/domain/: models.py
(+7 files in other folders)
