[project]
name = "ceysaid-intelligence-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "langchain>=1.2.10",
    "langchain-openai>=1.1.10",
    "loguru>=0.7.3",
    "markdownify>=1.2.2",
    "playwright>=1.58.0",
]
